@@ -1,5 +1,7 @@
 Version 1.0pre1 -- DEVELOPMENT
 ------------------------------
+- Made session cookie parameter use PHP's settings rather than making assumptions
+- Select/Deslect all implemented using only HTML (not Javascript)
 - Fixed default charset that is sent with outbound messages (now user's preferred charset)
 - Sort method saving now transparent to user, and saves between sessions
 - Now replacing all \n with \r\n before sending the message.
